--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </section>
 
       <!--==================== ABOUT ====================-->
-      <section class="about" id="about">
+      <section class="about" id="about" style="padding-bottom: 125px;">
         <div class="about__container container grid">
           <div class="about__img-wrapper">
             <img src="assets/img/about.jpg" alt="Foto do Sobre Mim" class="about__img" style="width: 450px;">
@@ -276,7 +276,88 @@
       </section>
 
       <!--==================== SERVICES ====================-->
-      <section class="services" id="services"></section>
+      <section class="services section" id="services">
+
+        <h2 class="section__title title-center" data-title="Serviços">
+          O que posso fazer por você
+        </h2>
+
+          <div class="services__container container grid">
+
+            <div class="services__item">
+              <i class="fa-solid fa-pen-to-square services__icon"></i>
+
+              <h3 class="services__title">UI/UX Desing</h3>
+              <p class="services__description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Nisi quos illum rerum inventore obcaecati saepe?
+              </p>
+
+              <span class="services__no">01</span>
+            </div>
+
+            <div class="services__item">
+              <i class="fa-solid fa-laptop services__icon"></i>
+
+              <h3 class="services__title">Web Desenvolvedor</h3>
+              <p class="services__description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Nisi quos illum rerum inventore obcaecati saepe?
+              </p>
+
+              <span class="services__no">02</span>
+            </div>
+
+            <div class="services__item">
+              <i class="fa-solid fa-chart-area services__icon"></i>
+
+              <h3 class="services__title">Procura e Analise</h3>
+              <p class="services__description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Nisi quos illum rerum inventore obcaecati saepe?
+              </p>
+
+              <span class="services__no">03</span>
+            </div>
+
+            <div class="services__item">
+              <i class="fa-solid fa-pen-to-square services__icon"></i>
+
+              <h3 class="services__title">UI/UX Desing</h3>
+              <p class="services__description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Nisi quos illum rerum inventore obcaecati saepe?
+              </p>
+
+              <span class="services__no">04</span>
+            </div>
+
+            <div class="services__item">
+              <i class="fa-solid fa-laptop services__icon"></i>
+
+              <h3 class="services__title">Web Desenvolvedor</h3>
+              <p class="services__description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Nisi quos illum rerum inventore obcaecati saepe?
+              </p>
+
+              <span class="services__no">05</span>
+            </div>
+
+            <div class="services__item">
+              <i class="fa-solid fa-chart-area services__icon"></i>
+
+              <h3 class="services__title">Procura e Analise</h3>
+              <p class="services__description">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Nisi quos illum rerum inventore obcaecati saepe?
+              </p>
+
+              <span class="services__no">06</span>
+            </div>
+
+          </div>
+      </section>
 
       <!--==================== SKILLS ====================-->
       <section class="skills"></section>
