--- a/index.html
+++ b/index.html
@@ -26,7 +26,46 @@
   </head>
   <body>
     <!--==================== STYLE SWITCHER ====================-->
-    <div class="style__switcher"></div>
+    <input type="radio" name="color" id="color-1" />
+    <input type="radio" name="color" id="color-2" />
+    <input type="radio" name="color" id="color-3" />
+    <input type="radio" name="color" id="color-4" />
+    <input type="radio" name="color" id="color-5" />
+    <input type="radio" name="color" id="color-6" />
+    <input type="radio" name="color" id="color-7" />
+    <input type="radio" name="color" id="color-8" />
+    <input type="radio" name="color" id="color-9" />
+    <input type="radio" name="color" id="color-10"> /
+    <input type="checkbox" id="toggler" />
+    <input type="checkbox" id="day-night" />
+
+    <div class="style__switcher">
+
+      <label for="toggler" class="style__switcher-toggler">
+        <i class="fa-solid fa-gear fa-spin"></i>
+      </label>
+
+      <label for="day-night" class="style__switcher-theme">
+        <i class="fa-solid fa-sun"></i>
+        <i class="fa-solid fa-moon"></i>
+      </label>
+
+      <h3 class="style__switcher-title">Cores do Tema</h3>
+
+      <div class="style__switcher-colors">
+        <label for="color-1" class="color-1 color"></label>
+        <label for="color-2" class="color-2 color"></label>
+        <label for="color-3" class="color-3 color"></label>
+        <label for="color-4" class="color-4 color"></label>
+        <label for="color-5" class="color-5 color"></label>
+        <label for="color-6" class="color-6 color"></label>
+        <label for="color-7" class="color-7 color"></label>
+        <label for="color-8" class="color-8 color"></label>
+        <label for="color-9" class="color-9 color"></label>
+        <label for="color-10" class="color-10 color"></label>
+      </div>
+
+    </div>
 
     <!--==================== HEADER ====================-->
     <header class="header">
@@ -72,7 +111,7 @@
             </p>
             <div class="home__btns">
               <a href="#contact" class="btn">Contate-Me</a>
-              <a href="#portfolio" class="btn btn--transparent">Portfolio</a>
+              <a href="#work" class="btn btn--transparent">Portfolio</a>
             </div>
 
           </div>
@@ -155,7 +194,7 @@
       <section class="qualification section" id="qualification">
         
         <h2 class="section__title title-center" data-title="Minha Jornada">
-          Qualificações
+          Experiências
         </h2>
 
         <div class="resume__container container grid">
@@ -485,7 +524,10 @@
 
       <!--==================== PORTFOLIO ====================-->
       <section class="works section" id="work">
-        <h2 class="section__title title-center" data-title="Meu Portfolio">Meus Portfolios</h2>
+
+        <h2 class="section__title title-center" data-title="Meu Portfolio">
+          Meus Portfolios
+        </h2>
 
         <div class="work__filters">
             <span class="work__item active-work" data-filter="all">Todos</span>
@@ -497,7 +539,7 @@
         <div class="work__container container grid">
 
             <div class="work__card mix web">
-                <img src="assets/img/project-img-1.jpg" alt="Trabalho 1 - Imagem">
+                <img src="assets/img/project-img-1.jpg" alt="Trabalho 1 - Imagem" class="work__img">
                 <h3 class="work__title">Web Design</h3>
                 <span class="work__button">Demo
                     <i class="fa-solid fa-caret-right work__button-icon"></i>
@@ -515,7 +557,7 @@
             </div>
 
             <div class="work__card mix app">
-                <img src="assets/img/project-img-2.jpg" alt="Trabalho 1 - Imagem">
+                <img src="assets/img/project-img-2.jpg" alt="Trabalho 1 - Imagem" class="work__img">
                 <h3 class="work__title">App Design</h3>
                 <span class="work__button">Demo
                     <i class="fa-solid fa-caret-right work__button-icon"></i>
@@ -533,7 +575,7 @@
             </div>
 
             <div class="work__card mix design">
-                <img src="assets/img/project-img-3.jpg" alt="Trabalho 1 - Imagem">
+                <img src="assets/img/project-img-3.jpg" alt="Trabalho 1 - Imagem" class="work__img">
                 <h3 class="work__title">Brand Design</h3>
                 <span class="work__button">Demo
                     <i class="fa-solid fa-caret-right work__button-icon"></i>
@@ -551,7 +593,7 @@
             </div>
 
             <div class="work__card mix app">
-                <img src="assets/img/project-img-4.jpg" alt="Trabalho 1 - Imagem">
+                <img src="assets/img/project-img-4.jpg" alt="Trabalho 1 - Imagem" class="work__img">
                 <h3 class="work__title">App Design</h3>
                 <span class="work__button">Demo
                     <i class="fa-solid fa-caret-right work__button-icon"></i>
@@ -569,7 +611,7 @@
             </div>
 
             <div class="work__card mix web">
-                <img src="assets/img/project-img-5.jpg" alt="Trabalho 1 - Imagem">
+                <img src="assets/img/project-img-5.jpg" alt="Trabalho 1 - Imagem" class="work__img">
                 <h3 class="work__title">Brand Design</h3>
                 <span class="work__button">Demo
                     <i class="fa-solid fa-caret-right work__button-icon"></i>
@@ -587,7 +629,7 @@
             </div>
 
             <div class="work__card mix design">
-                <img src="assets/img/project-img-6.jpg" alt="Trabalho 1 - Imagem">
+                <img src="assets/img/project-img-6.jpg" alt="Trabalho 1 - Imagem" class="work__img">
                 <h3 class="work__title">Web Design</h3>
                 <span class="work__button">Demo
                     <i class="fa-solid fa-caret-right work__button-icon"></i>
@@ -613,7 +655,7 @@
         <div class="portfolio__popup-inner">
           <div class="portfolio__popup-content grid">
             <span class="portfolio__popup-close"><i class="fa-solid fa-x"></i></span>
-            <div class="pp_thumbnail">
+            <div class="pp__thumbnail">
               <img src="assets/img/project-img-1.jpg" alt="" class="portfolio__popup-img">
             </div>
             <div class="portfolio__popup-info">
@@ -633,17 +675,110 @@
         </div>
       </div>
 
-      
-
-      <!--==================== TESTIMONIALS ====================-->
-      <section class="testimonials"></section>
-
       <!--==================== CONTACT ====================-->
-      <section class="contact" id="contact"></section>
+      <section class="contact section" id="contact">
+
+        <h2 class="section__title title-center" data-title="De um Toque">
+          Contate-Me
+        </h2>
+
+        <div class="contact__container container grid">
+          <div class="contact__details">
+
+            <div class="contact__item">
+              <i class="fa-solid fa-phone contact__icon"></i>
+
+              <div>
+                <h3 class="contact__title">Meu Número</h3>
+                <span class="contact__data">+55 41 9 8484-8484</span>
+              </div>
+
+            </div>
+
+            <div class="contact__item">
+              <i class="fa-solid fa-envelope contact__icon"></i>
+
+              <div>
+                <h3 class="contact__title">Email</h3>
+                <span class="contact__data">panda@gmail.com</span>
+              </div>
+
+            </div>
+
+            <div class="contact__item">
+              <i class="fa-solid fa-location-dot contact__icon"></i>
+
+              <div>
+                <h3 class="contact__title">Localização</h3>
+                <span class="contact__data">Brasil, Brasileiro</span>
+              </div>
+
+            </div>
+
+          </div>
+
+          <form action="" class="contact__form">
+            <div class="form__group">
+              <div class="form__input">
+                <input type="text" placeholder="Name" class="input__control">
+              </div>
+
+              <div class="form__input">
+                <input type="email" placeholder="Email" class="input__control">
+              </div>
+            </div>
+
+            <div class="form__input">
+              <input type="text" placeholder="Subject" class="input__control">
+            </div>
+
+            <div class="form__input">
+              <textarea 
+              name="" 
+              id=""
+              placeholder="Message"
+              cols="30"
+              rows="10"
+              class="input__control textarea"
+              ></textarea>
+            </div>
+
+            <button class="btn contact__btn">Mande uma Mensagem</button>
+          </form>
+
+        </div>
+      </section>
+
     </main>
 
     <!--==================== FOOTER ====================-->
-    <footer class="footer"></footer>
+
+    <footer class="footer">
+
+      <div class="footer__container container">
+
+        <p class="footer__copyright">&copy; 2024 | Jaensch | Todos os Direitos Reservados</p>
+
+        <div class="footer__social-links">
+
+          <a href="" class="footer__social-link" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="" class="footer__social-link" target="_blank">
+            <i class="fa-brands fa-whatsapp"></i>
+          </a>
+          <a href="" class="footer__social-link" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="" class="footer__social-link" target="_blank">
+            <i class="fa-regular fa-envelope"></i>
+          </a>
+
+        </div>
+
+      </div>
+
+    </footer>
 
     <!--==================== JS FILES ====================-->
     <script src="assets/js/main.js"></script>
