--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
       <nav class="nav container">
         <a href="index.html" class="nav__logo">Jaensch</a>
 
+        <input type="checkbox" id="nav-toggler">
+
+        <label for="nav-toggler" class="nav__toggle">
+          <i class="fa-solid fa-bars"></i>
+        </label>
+
         <ul class="nav__list">
           <li class="nav__item">
             <a href="#home" class="nav__link active-link">Início</a>
@@ -416,7 +422,7 @@
               <span class="skills__no">85 %</span>
             </div>
 
-            <p class="skill__description">
+            <p class="skill__description" style="padding-bottom: 15px;">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               Aut nihil, iusto esse qui sint ratione totam.
             </p>
@@ -434,7 +440,7 @@
               <span class="skills__no">90 %</span>
             </div>
 
-            <p class="skill__description">
+            <p class="skill__description" style="padding-bottom: 15px;">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               Aut nihil, iusto esse qui sint ratione totam.
             </p>
@@ -452,7 +458,7 @@
               <span class="skills__no">75 %</span>
             </div>
 
-            <p class="skill__description">
+            <p class="skill__description" style="padding-bottom: 15px;">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               Aut nihil, iusto esse qui sint ratione totam.
             </p>
@@ -470,7 +476,7 @@
               <span class="skills__no">85 %</span>
             </div>
 
-            <p class="skill__description">
+            <p class="skill__description" style="padding-bottom: 15px;">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               Aut nihil, iusto esse qui sint ratione totam.
             </p>
@@ -488,7 +494,7 @@
               <span class="skills__no">100 %</span>
             </div>
 
-            <p class="skill__description">
+            <p class="skill__description" style="padding-bottom: 15px;">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               Aut nihil, iusto esse qui sint ratione totam.
             </p>
@@ -506,7 +512,7 @@
               <span class="skills__no">95 %</span>
             </div>
 
-            <p class="skill__description">
+            <p class="skill__description" style="padding-bottom: 15px;">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
               Aut nihil, iusto esse qui sint ratione totam.
             </p>
